--- a/chor/templates/suggest.html
+++ b/chor/templates/suggest.html
@@ -1,3 +1,13 @@
+{#Copyright (C) 2012  Oliver Schmidt
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU Affero General Public License as
+published by the Free Software Foundation, either version 3 of the
+License, or (at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU Affero General Public License for more details. #}
 <html><!DOCTYPE HTML><head><title>Suggester</title>
         <script type="application/x-javascript" src="{{ STATIC_URL }}jquery.min.js"></script>
 		<script type="application/x-javascript" src="{{ STATIC_URL }}ajax_suggest.js"></script>
