--- a/chor/templates/kalender/day.html
+++ b/chor/templates/kalender/day.html
@@ -1,4 +1,4 @@
-{#Copyright (C) 2012  Oliver Schmidt
+{% comment %}Copyright (C) 2012  Oliver Schmidt
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as
 published by the Free Software Foundation, either version 3 of the
@@ -7,7 +7,7 @@ License, or (at your option) any later version.
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details. #}
+GNU Affero General Public License for more details. {% endcomment %}
 {% extends "base.html" %}
 {% load url from future %}
 {% block title %} Termine am {{ day }}. {{ month_name }} {{ year }} {% endblock %}
