--- a/chor/templates/kalender/year.html
+++ b/chor/templates/kalender/year.html
@@ -1,4 +1,4 @@
-{#Copyright (C) 2012  Oliver Schmidt
+{% comment %}Copyright (C) 2012  Oliver Schmidt
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as
 published by the Free Software Foundation, either version 3 of the
@@ -7,7 +7,7 @@ License, or (at your option) any later version.
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details. #}
+GNU Affero General Public License for more details. {% endcomment %}
 {% extends "base.html" %}
 {% load url from future %}
 moin {{ user.first_name }} aka {{ user }} <br />
@@ -27,7 +27,7 @@ moin {{ user.first_name }} aka {{ user }} <br />
 </span> {% if num == 6 %} <br /> {% endif %}
 
 
-<!-- {# show content of the variables for debugging #}cur: {{ current }} entr: {{ has_entry }} mon: {{ month }} n: {{ num }} <br /> -->
+<!-- {% comment %} show content of the variables for debugging {% endcomment %}cur: {{ current }} entr: {{ has_entry }} mon: {{ month }} n: {{ num }} <br /> -->
 
 {% endfor %}
 {% endspaceless %}
