Bugfixes, Recent Items (test)

--- a/chor/templates/kalender/home.html
+++ b/chor/templates/kalender/home.html
@@ -16,6 +16,9 @@ GNU Affero General Public License for more details. {% endcomment %}
 {% block content %}
 <h1>Willkommen beim Chorplaner</h1><br />
 <h2><a href="{% url "daily_view" calid=1 day=day month=month year=year%}">{{day}}.</a> <a href="{% url "kalender.views.monthly_view" calid=1 month=month year=year%}"> {{ month_name }}</a><a href="{% url "kalender.views.yearly_view" calid=1 year=year %}"> {{ year }}</a></h2><br />
+nächste Termine: {{ next_7_days }}<br />
+
+
 Kalender:<div style="text-align:left;"><ul>
 		{% for kal in Kalender %}
 		<li class="tlist"><a href="{% url "kalender.views.monthly_view" calid=kal.id month=month year=year %}">{{ kal.name }}</a></li>
