--- a/chor/templates/admin/index.html
+++ b/chor/templates/admin/index.html
@@ -1,4 +1,5 @@
-{#Copyright (C) 2012  Oliver Schmidt
+{% extends "admin/base_site.html" %}
+{% comment %}Copyright (C) 2012  Oliver Schmidt
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU Affero General Public License as
 published by the Free Software Foundation, either version 3 of the
@@ -7,8 +8,7 @@ License, or (at your option) any later version.
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU Affero General Public License for more details. #}
-{% extends "admin/base_site.html" %}
+GNU Affero General Public License for more details. {% endcomment %}
 {% load i18n %}
 
 {% block extrastyle %}{{ block.super }}<link rel="stylesheet" type="text/css" href="{% load adminmedia %}{% admin_media_prefix %}css/dashboard.css" />{% endblock %}
