--- a/chor/templates/base.html
+++ b/chor/templates/base.html
@@ -12,9 +12,11 @@ GNU Affero General Public License for more details. {% endcomment %}
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>
 			{% block title %}x {% endblock %}
 		</title>
+		<meta name="author" content="Oliver Schmidt">
 		<meta http-equiv="content-type" content="utf-8">
 		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="{{ STATIC_URL }}base.css" rel="stylesheet" type="text/css">
@@ -23,108 +25,14 @@ GNU Affero General Public License for more details. {% endcomment %}
         {% block html-head %} {% endblock %}
         </head>
 	<body>
-
-        <div id="header">
-		<a href="{% url "kalender.views.kalender_home_view" %}"><img src="{{ STATIC_URL }}logo.png" style="z-index: 2;height: 100%;" /></a> <span id="menu">
-                <div id="hMenu">
-                    <div class="sMenu">
-                        <div class="desc">
-                            Kalender(übersicht/categorys)
-                        </div>
-                        <div class="item">
-                            Chorkalender(--> aktuelles Jahr)
-                        </div>
-                        <div class="item">
-                            Termin erstellen
-                        </div>
-                        <div class="item">
-                            nächste Termine
-                        </div>
-                        <div class="item">
-                            #TODO: Filter (mit AJAX?)
-                        </div>
-                    </div>
-                    <div class="sMenu">
-                        <div class="desc">
-                            <a href="#">Forum</a>
-                        </div>
-                        <div class="item">
-                            Item1
-                        </div>
-                        <div class="item">
-                            Item2
-                        </div>
-                        <div class="item">
-                            Item3
-                        </div>
-                        <div class="item">
-                            Item1
-                        </div>
-                        <div class="item">
-                            Item2
-                        </div>
-                        <div class="item">
-                            Item3
-                        </div>
-                        <div class="item">
-                            Item1
-                        </div>
-                        <div class="item">
-                            Item2
-                        </div>
-                        <div class="item">
-                            Item3
-                        </div>
-                        <div class="item">
-                            Item1
-                        </div>
-                        <div class="item">
-                            Item2
-                        </div>
-                        <div class="item">
-                            Item3
-                        </div>
-                    </div>
-		    <div class="sMenu">
-                        <div class="desc">
-				<a href="{% url "kalender.views.logout_view" %}">Logout</a>
-	    </div></div>
-
-                </div>
-            </span>
-        </div>
-
-		
-        <div id="columns">
-
-        
-            <span id="sidebar"> <br /> {% block sidebar %}iufhui<br />
-            jugz {% endblock %}
-            </span>
-		
-
-        
-        
-            <div id="contentcont">
-                <div id="gradientbar"> &nbsp; </div>
-                <div id="content">
-			    {% block content %}Lorem Ipsum! Dolor sit amet
-			    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br />
-			    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br />
-			    aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaafewfwfwfhvawgfgkhfjgoifwaghvfhiawlgfvaksfhzsbghdliaksvfwauishsaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa<br />
-			    ödghböhahböajdkuhötajbabö{% endblock %}
-                </div>
-		    </div>
-		
-        </div>
-<div style="position:fixed;bottom:0px;height:1em;width:100%;text-align:right;background-color:#407E2D;color:white;"><a href="{% url "impressum" %}">Impressum</a></div>
-{% if debug %}
-            <script type="application/javascript">
-                {% for q in sql_queries %}
-                console.debug("({{ q.time }}s)", "{{ q.sql|escapejs }}");
-                {% endfor %}
-            </script>
-            {% endif %}
-
-	</body>
-</html>
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container"<
+					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+						<span style=="icon-bar"></span>
+					</a>
+					<a class="brand" href="{% URL kalender.views.home_view %}">Chorplaner</a> 
+					<div clas="nav-collapse collapse">
+						<ul class="nav">
+							<li class="active"><a href="H{% URL kalender.views.home_view %}">Home</a></li>
+							<li><a href="#Impressum">Impressum
