--- a/chor/templates/base.html
+++ b/chor/templates/base.html
@@ -13,6 +13,7 @@ GNU Affero General Public License for more details. {% endcomment %}
 <html>
 	<head>
 		<meta charset="utf-8">
+    		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>
 			{% block title %}x {% endblock %}
 		</title>
@@ -20,6 +21,7 @@ GNU Affero General Public License for more details. {% endcomment %}
 		<meta http-equiv="content-type" content="utf-8">
 		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="{{ STATIC_URL }}base.css" rel="stylesheet" type="text/css">
+		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 		<script type="application/x-javascript" src="{{ STATIC_URL }}jquery.min.js"></script>
 		<script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
         {% block html-head %} {% endblock %}
@@ -35,8 +37,8 @@ GNU Affero General Public License for more details. {% endcomment %}
 					<div clas="nav-collapse collapse">
 						<ul class="nav">
 							<li{% if menupoint == "Home" %} class="active"{% endif %}><a href="{% url "kalender.views.kalender_home_view" %}">Home</a></li>
-							<li><a href="#Kalenderuebersicht"{% if menupoint == "Kalenderuebersicht" %} class="active"{% endif %}>Kalenderübersicht</a>
-							<li><a href="{% url "kalender.views.create_termin" calid=1 %}"{% if menupoint == "terminerstellen" %} class="active"{% endif %}>Termin erstellen</a>
+							<li{% if menupoint == "Kalenderuebersicht" %} class="active"{% endif %}><a href="#Kalenderuebersicht">Kalenderübersicht</a></li>
+							<li{% if menupoint == "termin_erstellen" %} class="active"{% endif %}><a href="{% url "kalender.views.create_termin" calid=1 %}">Termin erstellen</a>
 							<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">About {{ menupoint }}<b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><a href="https://github.com/schmittlauch/chorplaner">Chorkalender auf GitHub</a></li>
@@ -64,18 +66,19 @@ GNU Affero General Public License for more details. {% endcomment %}
 	<!-- Le javascript
 	================================================== -->
 	<!-- Placed at the end of the document so the pages load faster -->
-	<script src="../assets/js/jquery.js"></script>
-	<script src="../assets/js/bootstrap-transition.js"></script>
-	<script src="../assets/js/bootstrap-alert.js"></script>
-	<script src="../assets/js/bootstrap-modal.js"></script>
-	<script src="../assets/js/bootstrap-dropdown.js"></script>
-	<script src="../assets/js/bootstrap-scrollspy.js"></script>
-	<script src="../assets/js/bootstrap-tab.js"></script>
-	<script src="../assets/js/bootstrap-tooltip.js"></script>
-	<script src="../assets/js/bootstrap-popover.js"></script>
-	<script src="../assets/js/bootstrap-button.js"></script>
-	<script src="../assets/js/bootstrap-collapse.js"></script>
-	<script src="../assets/js/bootstrap-carousel.js"></script>
-	<script src="../assets/js/bootstrap-typeahead.js"></script>
-	</body>
+	<!--
+	<script src="{{ STATIC_URL  }}bootstrap/js/jquery.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-transition.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-alert.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-modal.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-dropdown.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-scrollspy.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-tab.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-tooltip.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-popover.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-button.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-collapse.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-carousel.js"></script>
+	<script src="{{ STATIC_URL  }}bootstrap/js/bootstrap-typeahead.js"></script>-->
+</body>
 </html>
