--- a/chor/templates/base.html
+++ b/chor/templates/base.html
@@ -39,7 +39,7 @@ GNU Affero General Public License for more details. {% endcomment %}
 							<li{% if menupoint == "Home" %} class="active"{% endif %}><a href="{% url "kalender.views.kalender_home_view" %}">Home</a></li>
 							<li{% if menupoint == "Kalenderuebersicht" %} class="active"{% endif %}><a href="#Kalenderuebersicht">Kalenderübersicht</a></li>
 							<li{% if menupoint == "termin_erstellen" %} class="active"{% endif %}><a href="{% url "kalender.views.create_termin" calid=1 %}">Termin erstellen</a>
-							<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">About {{ menupoint }}<b class="caret"></b></a>
+							<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">About<b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><a href="https://github.com/schmittlauch/chorplaner">Chorkalender auf GitHub</a></li>
 								<li><a href="{% url "impressum" %}">Impressum</a></li>
