--- a/chor/staticfiles/base.css
+++ b/chor/staticfiles/base.css
@@ -61,22 +61,19 @@ h1{
     background-color: rgb(200, 125, 125);
 }
 #header{
-    min-width:100%!important;
-    padding:0px!important;
-    position:absolute;
+    //min-width:100%!important;
+    //padding:0px!important;
 }
 
 
 #content{
-    //position: absolute;
-    top: 8%;
-    //left: 0px;
+    //top: 10%;
     
     background-color: rgb(246,255,141);
-    //display: block;
-    width: 100%;
-    overflow-y: scroll;
-    overflow-x: hidden;
+    max-width: 100%!important;
+    width:100%;
+    overflow: scroll;
+    //overflow-x: hidden;
     min-height:100%;
     padding: 30px 32px 1em 15%;
 }
