--- a/chor/templates/login.html
+++ b/chor/templates/login.html
@@ -15,7 +15,7 @@ GNU Affero General Public License for more details. {% endcomment %}
 {% block content %}
 {% if error_message %} <p class="error_message"> {{ error_message }} </p> {% endif %}
 
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+<form class="form-login" method="post" action="{% url 'django.contrib.auth.views.login' %}">
 	{% csrf_token %}
 	<table>
 		<tr>
@@ -27,7 +27,7 @@ GNU Affero General Public License for more details. {% endcomment %}
 				<td>{{ form.password }}</td>
 		</tr>
 	</table>
-	<input type="submit" value="login" />
+	<input type="submit" class=btn value="login" />
 	<input type="hidden" name="next" value="{{ next }}" />
 </form>
 {% endblock %}
