Fixed navbar position in opera mobile

--- a/chor/staticfiles/base.css
+++ b/chor/staticfiles/base.css
@@ -9,7 +9,7 @@ but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Affero General Public License for more details.*/
 
-html,body{
+body{
 //    margin: 0px!important;
 //    min-height: 100%;
 //    display:block;
