--- a/chor/templates/base.html
+++ b/chor/templates/base.html
@@ -29,7 +29,7 @@ GNU Affero General Public License for more details. {% endcomment %}
 	<body>
 		<div class="navbar navbar-fixed-top navbar-inverse" id="header">
 			<div class="navbar-inner">
-				<div class="container"<
+				<div class="container">
 					<a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
 						<span class="icon-bar"></span>
 					</a>
