--- a/chor/templates/kalender/month.html
+++ b/chor/templates/kalender/month.html
@@ -23,7 +23,7 @@ GNU Affero General Public License for more details. {% endcomment %}
 {% for day, entries, linebreak, is_current in days %}
     {% if day == 0 %} <span class="empty"> &nbsp; </span>
     {% else %}  {% if entries > 0 %}<b> {% endif %}
-	    <a href="{% url "daily_view" calid=calid year=year month=month_num day=day %}"><span class="{% if is_current %}current_d{% else %}day{% endif %}"> {{ day }} </span></a>
+	    <a href="{% url "daily_view" calid=calid year=year month=month_num day=day %}"><span class="{% if is_current %}current_dayay{% else %}kday{% endif %}"> {{ day }} </span></a>
     {% if entries > 0 %} </b> {% endif %} {% if linebreak %} <br /> {% endif %}
     {% endif %}
 {% endfor %}
