--- a/chor/templates/base.html
+++ b/chor/templates/base.html
@@ -21,7 +21,7 @@ GNU Affero General Public License for more details. {% endcomment %}
 		<meta http-equiv="content-type" content="utf-8">
 		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link href="{{ STATIC_URL }}base.css" rel="stylesheet" type="text/css">
-		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+		<!--<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">-->
 		<script type="application/x-javascript" src="{{ STATIC_URL }}jquery.min.js"></script>
 		<script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
         {% block html-head %} {% endblock %}
