--- a/chor/staticfiles/base.css
+++ b/chor/staticfiles/base.css
@@ -43,6 +43,10 @@ h1{
     border-radius: 5px;
 }
 
+.has_termine {
+	background-color: rgb(230, 216, 164);
+}
+
 .thead, .kday, .empty, .current_day{
     height: 2em;
     width: 13%;
@@ -57,7 +61,7 @@ h1{
 .thead{
     background-color: rgb(220,120,100);
 }
-.kday, .empty, .kmonth{
+.empty, .kmonth, .no_termine{
     background-color: rgb(10,200,85);
 }
 .current_day, .current_month{
