termin_details uses accordion

--- a/chor/staticfiles/base.css
+++ b/chor/staticfiles/base.css
@@ -88,7 +88,7 @@ h1{
 	border-color:#4A8CF6;
 	border-width:2px;
 	border-style:solid;
-	background-color:#FFF;
+	background-color:rgba(254,254,254,0.3);
 	padding:0.5em;
 	margin: 0% 20% 0% 20%;
 	text-align:left;
