--- a/chor/templates/base.html
+++ b/chor/templates/base.html
@@ -19,7 +19,7 @@ GNU Affero General Public License for more details. {% endcomment %}
 		</title>
 		<meta name="author" content="Oliver Schmidt">
 		<meta http-equiv="content-type" content="utf-8">
-		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
+		<link href="{{ STATIC_URL }}bootstrap/css/bootstrap.css" rel="stylesheet">
 		<link href="{{ STATIC_URL }}base.css" rel="stylesheet" type="text/css">
 		<!--<link href="{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">-->
 		<script type="application/x-javascript" src="{{ STATIC_URL }}jquery.min.js"></script>
